Fix NPE with null configFile
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/trunk/jbossws-core@2136 50344849-fb0f-0410-a53f-a94597aac05c